# pipedash

./: .dockerignore  .gitignore  Cargo.toml  PRIVACY.md  README.md  codecov.yml  eslint.config.mjs  index.html  knip.json  mise.toml  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts
crates/pipedash/: Cargo.toml  entitlements.plist  tauri.conf.json
crates/pipedash-core/: Cargo.toml
crates/pipedash-core/migrations-metrics/postgres/: 20250101000001_initial_metrics.sql  20250101000002_metrics_deduplication.sql  20250101000003_hash_based_deduplication.sql
crates/pipedash-core/migrations-metrics/sqlite/: 20250101000002_metrics_deduplication.sql  20250101000003_hash_based_deduplication.sql
crates/pipedash-core/migrations/postgres/: 20250101000001_initial_schema.sql  20250101000002_workflow_parameters.sql  20250101000003_refresh_interval.sql  20250101000004_run_history.sql  20250101000005_run_history_hash.sql  20250101000006_table_preferences.sql  20250104000001_add_provider_id_index.sql  20250104000002_provider_permissions.sql  20250115000001_provider_fetch_status.sql  20250127000001_optimize_indexes.sql  20250128000001_storage_metadata.sql  20250128000003_merge_metrics.sql  20250128000004_encrypted_tokens.sql  20250129000001_optimize_provider_queries.sql  20250131000001_add_pinned_column.sql
crates/pipedash-core/migrations/sqlite/: 20250101000001_initial_schema.sql  20250101000002_workflow_parameters.sql  20250101000003_refresh_interval.sql  20250101000004_run_history.sql  20250115000001_provider_fetch_status.sql  20250127000001_optimize_indexes.sql  20250128000001_storage_metadata.sql  20250128000002_add_version_column.sql  20250128000003_merge_metrics.sql  20250129000002_remove_s3_sync_table.sql  20250130000001_provider_encrypted_tokens.sql  20250131000001_add_pinned_column.sql
crates/pipedash-core/src/: event.rs  lib.rs  logging.rs  tray_status.rs
crates/pipedash-core/src/application/: mod.rs  refresh_manager.rs
crates/pipedash-core/src/application/services/: metrics_service.rs  mod.rs  pipeline_service.rs  provider_service.rs
crates/pipedash-core/src/domain/: error.rs  metrics.rs  mod.rs  pipeline.rs  provider.rs  validation.rs
crates/pipedash-core/src/infrastructure/: config_backend.rs  deduplication.rs  http_client.rs  migration.rs  mod.rs  token_store.rs
crates/pipedash-core/src/infrastructure/config/: encrypted_config.rs  interpolation.rs  loader.rs  manager.rs  migration.rs  mod.rs  schema.rs  state.rs  sync.rs  token_ref.rs  validation.rs
crates/pipedash-core/src/infrastructure/database/: metrics_repository.rs  mod.rs  postgres_backend.rs  repository.rs  schema.rs  sqlite_backend.rs
crates/pipedash-core/src/infrastructure/migration/: backup.rs  validator.rs
crates/pipedash-core/src/infrastructure/providers/: mod.rs  plugin_adapter.rs
crates/pipedash-core/src/infrastructure/secrets/: mod.rs  postgres.rs  sqlite.rs
crates/pipedash-core/src/infrastructure/storage/: mod.rs  postgres.rs
crates/pipedash-core/src/infrastructure/sync/: mod.rs
crates/pipedash-core/src/plugins/: mod.rs
crates/pipedash-desktop/: Cargo.toml  tauri.conf.json
crates/pipedash-desktop/capabilities/: default.json
crates/pipedash-desktop/icons/: icon.icns
crates/pipedash-desktop/src/: commands.rs  fallback_store.rs  keyring_store.rs  lib.rs  main.rs  tauri_event_bus.rs  tray.rs
crates/pipedash-plugin-api/: Cargo.toml
crates/pipedash-plugin-api/src/: defaults.rs  error.rs  lib.rs  plugin.rs  registry.rs  schema.rs  types.rs  utils.rs
crates/pipedash-plugin-argocd/: Cargo.toml
crates/pipedash-plugin-argocd/src/: client.rs  config.rs  lib.rs  mapper.rs  metadata.rs  plugin.rs  schema.rs  types.rs
crates/pipedash-plugin-bitbucket/: Cargo.toml
crates/pipedash-plugin-bitbucket/src/: client.rs  config.rs  lib.rs  mapper.rs  metadata.rs  plugin.rs  schema.rs  types.rs
crates/pipedash-plugin-buildkite/: Cargo.toml
crates/pipedash-plugin-buildkite/src/: client.rs  config.rs  lib.rs  mapper.rs  metadata.rs  plugin.rs  schema.rs  types.rs
crates/pipedash-plugin-github/: Cargo.toml
crates/pipedash-plugin-github/src/: client.rs  config.rs  lib.rs  mapper.rs  metadata.rs  permissions.rs  plugin.rs  schema.rs  types.rs
crates/pipedash-plugin-gitlab/: Cargo.toml
crates/pipedash-plugin-gitlab/src/: client.rs  config.rs  lib.rs  mapper.rs  metadata.rs  plugin.rs  schema.rs  types.rs
crates/pipedash-plugin-jenkins/: Cargo.toml
crates/pipedash-plugin-jenkins/src/: client.rs  config.rs  lib.rs  mapper.rs  metadata.rs  plugin.rs  schema.rs  types.rs
crates/pipedash-plugin-tekton/: Cargo.toml
crates/pipedash-plugin-tekton/src/: client.rs  config.rs  lib.rs  mapper.rs  metadata.rs  plugin.rs  schema.rs  types.rs
crates/pipedash-web/: Cargo.toml  build.rs
crates/pipedash-web/src/: error.rs  main.rs  state.rs  static_files.rs  ws.rs
crates/pipedash-web/src/routes/: cache.rs  health.rs  metrics.rs  mod.rs  pipelines.rs  plugins.rs  preferences.rs  providers.rs  refresh.rs  setup.rs  storage.rs  system.rs  vault.rs
crates/pipedash/capabilities/: default.json
crates/pipedash/migrations/: 20250101000005_run_history_hash.sql  20250101000006_table_preferences.sql  20250104000001_add_provider_id_index.sql  20250104000002_provider_permissions.sql
crates/pipedash/migrations_metrics/: 20250101000001_initial_metrics.sql
crates/pipedash/src/: lib.rs  main.rs  plugins.rs
crates/pipedash/src/application/: commands.rs  mod.rs  refresh_manager.rs
crates/pipedash/src/application/services/: metrics_service.rs  mod.rs  pipeline_service.rs  provider_service.rs
crates/pipedash/src/domain/: error.rs  metrics.rs  mod.rs  pipeline.rs  provider.rs
crates/pipedash/src/infrastructure/: deduplication.rs  mod.rs
crates/pipedash/src/infrastructure/database/: metrics_database.rs  metrics_repository.rs  mod.rs  repository.rs  schema.rs
crates/pipedash/src/infrastructure/providers/: mod.rs  plugin_adapter.rs
docker/: Dockerfile
hacks/: Cargo.toml
scripts/: clean-repo-history.sh  fix_updater_json.py
src/: App.css  App.tsx  main.tsx
(+140 files in other folders)
