[workspace]
resolver = "2"
members = [
  "crates/pipedash",
  "crates/pipedash-plugin-api",
  "crates/pipedash-plugin-buildkite",
  "crates/pipedash-plugin-github",
  "crates/pipedash-plugin-gitlab",
  "crates/pipedash-plugin-jenkins",
  "crates/pipedash-plugin-tekton",
  "crates/pipedash-plugin-argocd",
]

[workspace.package]
version = "0.0.7"
authors = ["Pipedash Team"]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
# Async
async-trait = "0.1"
base64 = "0.22"
# Date/Time
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
# Security (only for main app)
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
# Plugin-specific
octocrab = "0.47.1"
# Internal workspace crates
pipedash-plugin-api = { path = "crates/pipedash-plugin-api" }
pipedash-plugin-buildkite = { path = "crates/pipedash-plugin-buildkite" }
pipedash-plugin-github = { path = "crates/pipedash-plugin-github" }
pipedash-plugin-gitlab = { path = "crates/pipedash-plugin-gitlab" }
pipedash-plugin-jenkins = { path = "crates/pipedash-plugin-jenkins" }
pipedash-plugin-tekton = { path = "crates/pipedash-plugin-tekton" }
pipedash-plugin-argocd = { path = "crates/pipedash-plugin-argocd" }
# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Database (only for main app)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
# Tauri (only for main app)
tauri = { version = "2", features = ["devtools"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
# Error Handling
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
# Logging
tracing = "0.1"
