[workspace]
resolver = "2"
members = [
  "crates/pipedash-desktop",
  "crates/pipedash-web",
  "crates/pipedash-core",
  "crates/pipedash-plugin-api",
  "crates/pipedash-plugin-bitbucket",
  "crates/pipedash-plugin-buildkite",
  "crates/pipedash-plugin-github",
  "crates/pipedash-plugin-gitlab",
  "crates/pipedash-plugin-jenkins",
  "crates/pipedash-plugin-tekton",
  "crates/pipedash-plugin-argocd",
]

[workspace.package]
version = "0.0.8"
authors = ["Pipedash Team"]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2.0"

async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
glob = "0.3"

base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "form"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
http = "1.4"
argon2 = "0.5"
zeroize = "1.8"

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }

tokio-tungstenite = "0.28"

rust-embed = "8.9"
mime_guess = "2.0"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate", "chrono"] }

sha2 = "0.10"
aes-gcm = "0.10"
secrecy = "0.10"



k8s-openapi = { version = "0.26", features = ["v1_31"] }
kube = { version = "2.0", features = ["client", "config", "runtime"] }

dirs = "6.0"
rand = "0.9"
regex = "1.12"
shellexpand = "3.1"
urlencoding = "2.1"
hostname = "0.4"
toml = "0.9"
toml_edit = "0.24"
dashmap = "6"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

octocrab = "0.49.5"


pipedash-plugin-api = { version = "0.0.8", path = "crates/pipedash-plugin-api" }
pipedash-plugin-bitbucket = { version = "0.0.8", path = "crates/pipedash-plugin-bitbucket" }
pipedash-plugin-buildkite = { version = "0.0.8", path = "crates/pipedash-plugin-buildkite" }
pipedash-plugin-github = { version = "0.0.8", path = "crates/pipedash-plugin-github" }
pipedash-plugin-gitlab = { version = "0.0.8", path = "crates/pipedash-plugin-gitlab" }
pipedash-plugin-jenkins = { version = "0.0.8", path = "crates/pipedash-plugin-jenkins" }
pipedash-plugin-tekton = { version = "0.0.8", path = "crates/pipedash-plugin-tekton" }
pipedash-plugin-argocd = { version = "0.0.8", path = "crates/pipedash-plugin-argocd" }
pipedash-core = { version = "0.0.8", path = "crates/pipedash-core" }
pipedash-web = { version = "0.0.8", path = "crates/pipedash-web" }

tempfile = "3.24"

[patch.crates-io]
pipedash-plugin-api = { path = "crates/pipedash-plugin-api" }
pipedash-plugin-github = { path = "crates/pipedash-plugin-github" }
pipedash-plugin-gitlab = { path = "crates/pipedash-plugin-gitlab" }
pipedash-plugin-bitbucket = { path = "crates/pipedash-plugin-bitbucket" }
pipedash-plugin-buildkite = { path = "crates/pipedash-plugin-buildkite" }
pipedash-plugin-jenkins = { path = "crates/pipedash-plugin-jenkins" }
pipedash-plugin-tekton = { path = "crates/pipedash-plugin-tekton" }
pipedash-plugin-argocd = { path = "crates/pipedash-plugin-argocd" }
pipedash-core = { path = "crates/pipedash-core" }
pipedash-web = { path = "crates/pipedash-web" }
