[workspace]
resolver = "2"
members = [
  "crates/pipedash-core",
  "crates/pipedash-desktop",
  "crates/pipedash-plugin-api",
  "crates/pipedash-plugin-argocd",
  "crates/pipedash-plugin-bitbucket",
  "crates/pipedash-plugin-buildkite",
  "crates/pipedash-plugin-github",
  "crates/pipedash-plugin-gitlab",
  "crates/pipedash-plugin-jenkins",
  "crates/pipedash-plugin-tekton",
  "crates/pipedash-web",
]

[workspace.package]
version = "0.1.1"
authors = ["Pipedash Team"]
edition = "2021"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
dirs = "6.0"
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
hostname = "0.4"
http = "1.4"
k8s-openapi = { version = "0.26", features = ["v1_31"] }
kube = { version = "2.0", features = ["client", "config", "runtime"] }
mime_guess = "2.0"
octocrab = "0.49.5"
pipedash-core = { version = "0.1.1", path = "crates/pipedash-core" }
pipedash-plugin-api = { version = "0.1.1", path = "crates/pipedash-plugin-api" }
pipedash-plugin-argocd = { version = "0.1.1", path = "crates/pipedash-plugin-argocd" }
pipedash-plugin-bitbucket = { version = "0.1.1", path = "crates/pipedash-plugin-bitbucket" }
pipedash-plugin-buildkite = { version = "0.1.1", path = "crates/pipedash-plugin-buildkite" }
pipedash-plugin-github = { version = "0.1.1", path = "crates/pipedash-plugin-github" }
pipedash-plugin-gitlab = { version = "0.1.1", path = "crates/pipedash-plugin-gitlab" }
pipedash-plugin-jenkins = { version = "0.1.1", path = "crates/pipedash-plugin-jenkins" }
pipedash-plugin-tekton = { version = "0.1.1", path = "crates/pipedash-plugin-tekton" }
pipedash-web = { version = "0.1.1", path = "crates/pipedash-web" }
rand = "0.9"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
  "form",
  "json",
  "rustls-no-provider",
] }
rust-embed = "8.9"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shellexpand = "3.1"
sqlx = { version = "0.8", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio",
  "sqlite",
] }
tempfile = "3.24"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
toml = "0.9"
toml_edit = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = [
  "compression-gzip",
  "cors",
  "fs",
  "trace",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
zeroize = "1.8"

[patch.crates-io]
pipedash-core = { path = "crates/pipedash-core" }
pipedash-plugin-api = { path = "crates/pipedash-plugin-api" }
pipedash-plugin-argocd = { path = "crates/pipedash-plugin-argocd" }
pipedash-plugin-bitbucket = { path = "crates/pipedash-plugin-bitbucket" }
pipedash-plugin-buildkite = { path = "crates/pipedash-plugin-buildkite" }
pipedash-plugin-github = { path = "crates/pipedash-plugin-github" }
pipedash-plugin-gitlab = { path = "crates/pipedash-plugin-gitlab" }
pipedash-plugin-jenkins = { path = "crates/pipedash-plugin-jenkins" }
pipedash-plugin-tekton = { path = "crates/pipedash-plugin-tekton" }
pipedash-web = { path = "crates/pipedash-web" }
