[package]
name = "pipedash-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Framework-agnostic core library for Pipedash"
license = "GPL-3.0"
repository = "https://github.com/hcavarsan/pipedash"

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true

sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true
indexmap = { version = "2", features = ["serde"] }
chrono.workspace = true
base64.workspace = true

thiserror.workspace = true
anyhow.workspace = true

sha2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
hostname.workspace = true
toml.workspace = true
toml_edit.workspace = true
regex.workspace = true
dashmap.workspace = true
glob.workspace = true

reqwest.workspace = true

pipedash-plugin-api.workspace = true
pipedash-plugin-github.workspace = true
pipedash-plugin-gitlab.workspace = true
pipedash-plugin-bitbucket.workspace = true
pipedash-plugin-buildkite.workspace = true
pipedash-plugin-jenkins.workspace = true
pipedash-plugin-tekton.workspace = true
pipedash-plugin-argocd.workspace = true

aes-gcm.workspace = true
rand.workspace = true
argon2.workspace = true
zeroize.workspace = true



[dev-dependencies]
tempfile.workspace = true

[features]
default = ["postgres"]
postgres = []
full = ["postgres"]
