[package]
name = "pipedash-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Framework-agnostic core library for Pipedash"
repository = "https://github.com/hcavarsan/pipedash"
license = "GPL-3.0"

[lib]
crate-type = ["rlib"]

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
dashmap.workspace = true
dirs.workspace = true
futures.workspace = true
glob.workspace = true
hostname.workspace = true
indexmap = { version = "2", features = ["serde"] }
pipedash-plugin-api.workspace = true
pipedash-plugin-argocd.workspace = true
pipedash-plugin-bitbucket.workspace = true
pipedash-plugin-buildkite.workspace = true
pipedash-plugin-github.workspace = true
pipedash-plugin-gitlab.workspace = true
pipedash-plugin-jenkins.workspace = true
pipedash-plugin-tekton.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["postgres"]
full = ["postgres"]
postgres = []
