[package]
name = "pipedash-plugin-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Plugin API for Pipedash - CI/CD pipeline dashboard"
repository = "https://github.com/hcavarsan/pipedash"
license = "GPL-3.0"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
