[package]
name = "pipedash-plugin-bitbucket"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Bitbucket Pipelines plugin for Pipedash"
repository = "https://github.com/hcavarsan/pipedash"
license = "GPL-3.0"

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
pipedash-plugin-api.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
urlencoding.workspace = true
