[package]
name = "pipedash-plugin-buildkite"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Buildkite plugin for Pipedash"
repository = "https://github.com/hcavarsan/pipedash"
license = "GPL-3.0"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
pipedash-plugin-api.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
