[package]
name = "pipedash-plugin-github"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures = "0.3"
octocrab.workspace = true
pipedash-plugin-api.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
