[package]
name = "pipedash-plugin-tekton"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
dirs = "5.0"
futures.workspace = true
http = "1.0"
k8s-openapi = { version = "0.23", features = ["v1_31"] }
kube = { version = "0.96", features = ["client", "config", "runtime"] }
pipedash-plugin-api.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand = "3.1"
tokio.workspace = true
