[package]
name = "pipedash-plugin-tekton"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Tekton CD plugin for Pipedash"
repository = "https://github.com/hcavarsan/pipedash"
license = "GPL-3.0"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
http.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
pipedash-plugin-api.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
tokio.workspace = true
tracing.workspace = true
