[package]
name = "pipedash-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "REST API server for Pipedash"
repository = "https://github.com/hcavarsan/pipedash"
license = "GPL-3.0"

[[bin]]
name = "pipedash-web"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow.workspace = true
# Async
async-trait.workspace = true
# Web framework
axum = { workspace = true, features = ["macros", "ws"] }
# Chrono for timestamps
chrono.workspace = true
# Configuration
dirs.workspace = true
futures-util.workspace = true
mime_guess.workspace = true
# Core
pipedash-core.workspace = true
pipedash-plugin-api.workspace = true
# Static file embedding
rust-embed.workspace = true
# TLS/Crypto
rustls.workspace = true
# Serialization
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
# Async runtime
tokio = { workspace = true, features = ["full"] }
# WebSocket
tokio-tungstenite.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
# Logging
tracing.workspace = true

[features]
default = ["postgres"]
full = ["postgres"]
postgres = ["pipedash-core/postgres"]
