[package]
name = "pipedash"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A Tauri App"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "pipedash_lib"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
keyring.workspace = true
pipedash-plugin-api.workspace = true
pipedash-plugin-buildkite.workspace = true
pipedash-plugin-github.workspace = true
pipedash-plugin-jenkins.workspace = true
reqwest.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-os.workspace = true
thiserror.workspace = true
tokio.workspace = true

[build-dependencies]
tauri-build.workspace = true
